[add]いいね機能

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,10 +7,10 @@ ja:
           almost: "明日こそ" # 2
 
       favorite:
-        favoite_type:
-          nice: "いいね！" # 0
-          like: "これ好き！" # 1
-          fight: "応援してる！" # 2
+        type:
+          nice: "いいね" # 0
+          like: "これ好き" # 1
+          fight: "応援してる" # 2
 
       objective:
         period_genre:
