[fix]topic objective エラー内容表示

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -40,8 +40,10 @@ ja:
           title: "目標"
         objective:
           title: "どちらかの目標"
-          did_it: "できたこと"
-          could_not: "できなかったこと"
+        topic:
+          title: "トピック名"
+          tag_ids: "いずれかのタグにチェック"
+
 
     errors:
       blank: を入力してください
